fix(public): question stats text align

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -45,6 +45,7 @@
   align-items: center;
   width: 10%;
   padding: .2em;
+  text-align: center;
 }
 
 .postsContainer > li > .question > .question-summary {
